--- a/configData/gateway-service.yml
+++ b/configData/gateway-service.yml
@@ -14,7 +14,7 @@ spring:
           enabled: true
       routes:
         - id: client-service
-          uri: lb://client-service
+          uri: http://localhost:8011/
           predicates:
             - Path=/clients/**
 
