--- a/configData/gateway-service.yml
+++ b/configData/gateway-service.yml
@@ -19,6 +19,26 @@ spring:
             - Path=/clients/**
 
         - id: account-service
-          uri: lb://accounts
+          uri: http://localhost:8012/
           predicates:
             - Path=/accounts/**
+
+        - id: assignment-service
+          uri: http://localhost:8013/
+          predicates:
+            - Path=/assignments/**
+
+        - id: credit-service
+          uri: http://localhost:8014/
+          predicates:
+            - Path=/credits/**
+
+        - id: yanki-service
+          uri: http://localhost:8015/
+          predicates:
+            - Path=/yanki/**
+
+        - id: bootcoin-service
+          uri: http://localhost:8016/
+          predicates:
+            - Path=/bootcoin/**
